test/libsolidity/syntaxTests/parsing/mapping_nonelementary_key_4.sol
contract c {
	mapping(string[] => uint) data;
}
// ----
// ParserError 2314: (28-29): Expected '=>' but got '['
